//
//  Category.swift
//  ListPerformanceProject
//
//  Created by Kritchanat on 10/12/2567 BE.
//

import Foundation

enum Category: String, CaseIterable {
    case personal = "Personal"
    case work = "Work"
    case shopping = "Shopping"
}
